--- a/scripts/R04_egg_experiments_mice.Rmd
+++ b/scripts/R04_egg_experiments_mice.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(tidyverse)
 library(ggpubr)
+library(cowplot)
 ```
 
 ```{r}
@@ -52,6 +53,32 @@ egg_days <- egg %>%
         axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/1.3)
 egg_days
 
-ggsave('../data/R04_egg_diet_days.pdf', width = 4, height = 3)
+```
+
+
+```{r}
+title <- ggdraw() + 
+  draw_label(
+    "Fig. R1",
+    fontface = 'bold',
+    x = 0,
+    hjust = 0
+  ) +
+  theme(
+    plot.margin = margin(0, 0, 0, 0)
+  )
+
+plot_egg <- plot_grid(egg_days, nrow = 1)
+
+ 
+combined <- plot_grid(
+  title, plot_egg,
+  ncol = 1,
+  # rel_heights values control vertical title margins
+  rel_heights = c(0.1, 1)
+)+theme(plot.margin = unit(c(1,1,5,1), "cm"))
+
+ggsave('../data/Fig_R1_egg_days_04.pdf',
+      width = 210, height = 157, units = "mm", device = 'pdf', plot = combined, dpi = 300) 
 ```
 
