--- a/scripts/R09_clinical_outcome.Rmd
+++ b/scripts/R09_clinical_outcome.Rmd
@@ -348,34 +348,47 @@ combined <- plot_grid(
 ggsave('../data/S11_clinical_outcome_supp_R09.pdf',
       width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)  
 ```
+  
 
-
-
-
-
+# revised a-gvhd onset analysis
 
 ```{r}
-df_main %>% count(RPevent, type_gvhd)
-```
-# revised a gvhd onset analysis
-
-```{r}
-load('../data/df_main_Sep18.Rdata')
 library(tidycmprsk)
 library(ggsurvfit)
 library(gtsummary)
 library(gt)
-library(tidyverse)
+library(tidyverse) 
+load('../data/df_main_Sep18.Rdata')
+  
+df_main <- df_main %>% 
+  mutate(intensity = factor(intensity, levels = c('nonablative','reduced','ablative'))) %>% 
+  mutate(source_and_gvhdppx = str_glue('{source}+{gvhd_ppx}'))
 
+df_main %>% count(type_gvhd_simple)
+```
+
+## aGVHD onset cumulative incidence ~ modal_diet
+
+```{r}
 # aGVHD onset cumulative incidence ~ modal_diet
-tidycmprsk::cuminc(Surv(tgvhd_event-12,type_gvhd_simple)~modal_diet, data = df_main |> filter(source!="TCD" & tgvhd_event-12 > 0)) %>%
+cuminc_cluster <- tidycmprsk::cuminc(Surv(tgvhd_event-12,type_gvhd_simple)~modal_diet, data = df_main |> filter(source!="TCD" & tgvhd_event-12 > 0)) %>%
   ggcuminc(linewidth = 0.8, outcome="aGVHD") +
   add_risktable()+
   ylab("aGVHD onset cumulative incidence") +
   xlab("Days relative to HCT (Landmarked at day 12)")+
   ylim(c(0,0.8))
 
+
+cuminc_cluster_plot <- list(
+  ggsurvfit::ggsurvfit_build(cuminc_cluster)
+) |> 
+  wrap_plots()
+```
+
+
+```{r}
 # aGVHD onset cumulative incidence ~ modal_diet
+# high intake
 tidycmprsk::cuminc(Surv(tgvhd_event-12,type_gvhd_simple)~day_exposed_cat, data = df_main |> filter(source!="TCD" & tgvhd_event-12 > 0 & modal_diet == "High intake")) %>%
   ggcuminc(linewidth = 0.8, outcome="aGVHD") +
   add_risktable()+
@@ -383,7 +396,12 @@ tidycmprsk::cuminc(Surv(tgvhd_event-12,type_gvhd_simple)~day_exposed_cat, data =
   xlab("Days relative to HCT, landmarked at day 12")+
   ylim(c(0,0.8))+ 
   ggtitle("Patients with high intake")
+```
 
+
+```{r}
+# aGVHD onset cumulative incidence ~ modal_diet
+# low intake
 tidycmprsk::cuminc(Surv(tgvhd_event-12,type_gvhd_simple)~day_exposed_cat, data = df_main |> filter(source!="TCD" & tgvhd_event-12 > 0 & modal_diet == "Low intake")) %>%
   ggcuminc(linewidth = 0.8, outcome="aGVHD") +
   add_risktable()+
@@ -391,17 +409,58 @@ tidycmprsk::cuminc(Surv(tgvhd_event-12,type_gvhd_simple)~day_exposed_cat, data =
   xlab("Days relative to HCT, landmarked at day 12")+
   ylim(c(0,0.8))+ 
   ggtitle("Patients with low intake")
+```
 
-fitAGVHD <- crr(Surv(tgvhd_event-12,type_gvhd_simple)~modal_diet + day_exposed + intensity + source + gvhd_ppx, data = df_main |> filter(source!="TCD" & tgvhd_event-12 > 0)) |> 
+## aGVHDonset : multivariate
+
+```{r}
+# aGVHDonset : multivariate
+fitAGVHD <- crr(Surv(tgvhd_event-12,type_gvhd_simple)~modal_diet + day_exposed + intensity + source_and_gvhdppx, data = df_main |> filter(source!="TCD" & tgvhd_event-12 > 0)) |> 
   tbl_regression(exponentiate = FALSE)|> 
   bold_p() |> 
   as_gt() |> 
-  gtsave(filename="../data/aGVHDonset_model.html")
+  gtsave(filename="../data/aGVHDonset_model_multi.png")
 
+# I tried the interactive version: modal_diet * day_exposed and the interaction term is not significant, so I can just have them as indenpendent ones. 
+```
+
+```{r}
+# aGVHDonset : univariate
 fitAGVHD <- crr(Surv(tgvhd_event-12,type_gvhd_simple)~modal_diet, data = df_main |> filter(source!="TCD" & tgvhd_event-12 > 0)) |> 
   tbl_regression(exponentiate = FALSE)|> 
   bold_p() |> 
   as_gt() |> 
-  gtsave(filename="../data/aGVHDonset_model.html")
+  gtsave(filename="../data/aGVHDonset_model_uni.html")  
+```
+
+## R3 figure
+
+```{r}
+# I think it would be a good idea to make this R only figure including the c i curve with the two clusters and the multivariate model with the crr
+ title <- ggdraw() + 
+  draw_label(
+    "Fig. R3",
+    fontface = 'bold',
+    x = 0,
+    hjust = 0
+  ) +
+  theme(
+    plot.margin = margin(0, 0, 0, 0)
+  )
+
+
+aGVHDonset_model_multi <- ggdraw() + draw_image("../data/aGVHDonset_model_multi.png", scale = 1)
+
+plot_ <- plot_grid(cuminc_cluster_plot, aGVHDonset_model_multi,   nrow = 2, align = 'vh', axis = 'lrtb', labels = c('A','B'), rel_widths = c(2, 2))
+
+combined <- plot_grid(
+  title, plot_,
+  ncol = 1,
+  # rel_heights values control vertical title margins
+  rel_heights = c(0.1, 1)
+)+theme(plot.margin = unit(c(1,1,1,1), "cm"))
+
+ggsave('../data/Fig_R3_aGVHD_onset.pdf',
+      width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)  
 ```
 
