--- a/scripts/180_genus_heatmap_supple.Rmd
+++ b/scripts/180_genus_heatmap_supple.Rmd
@@ -26,7 +26,10 @@ I need a different matrix with only the perc positive to make the dendrogram
 
 ```{r}
 # I want to only include the genus that are more prevalent and abundant, and most likely exist in human gut
-selected <- read_csv('../data/087_more_abundant_0.002_genus_33.csv') 
+
+rm <- c('Ruthenibacterium', 'Drancourtella')
+selected <- read_csv('../data/087_more_abundant_0.002_genus_33.csv')  %>% 
+  filter(!genus %in% rm)
 
 ```
 
@@ -63,9 +66,10 @@ dendro
 
 ```{r}
 # I wanna redefine sig level to be 90%, 95%, 99%  
-# I wanna redefine a color block threshold to be 80%
 matchingtb <- read_rds('../data/196_matching_shortname.rds')
 
+
+## !!!!!!! I wanna now define it to be 94%, 97%, 99% 
 post_res_genera <- post_df %>% 
   group_by(genus, item) %>% 
   summarise(q50 = round(median(coeff), 2),
@@ -73,11 +77,19 @@ post_res_genera <- post_df %>%
             q95 = round(quantile(coeff, probs = 0.95), 2),
             q2.5 = round(quantile(coeff, probs = 0.025), 2),
             q97.5 = round(quantile(coeff, probs = 0.975), 2),
+            # 94%
+            q3 = round(quantile(coeff, probs = 0.03), 2),
+            q97 = round(quantile(coeff, probs = 0.97), 2),
+            # 97%
+            q1.5 = round(quantile(coeff, probs = 0.015), 2),
+            q98.5 = round(quantile(coeff, probs = 0.985), 2),
+            # 99%
             q0.5 = round(quantile(coeff, probs = 0.005), 2),
             q99.5 = round(quantile(coeff, probs = 0.995), 2)
             ) %>% 
   ungroup() %>% 
-  mutate(mark = if_else(q99.5 <= 0 | q0.5 >= 0, '***', if_else(q97.5 <= 0 | q2.5 >= 0, '**', if_else(q95 <= 0 | q5 >= 0, '*', '')))) %>% 
+  #mutate(mark = if_else(q99.5 <= 0 | q0.5 >= 0, '***', if_else(q97.5 <= 0 | q2.5 >= 0, '**', if_else(q95 <= 0 | q5 >= 0, '*', '')))) %>% 
+  mutate(mark = if_else(q99.5 <= 0 | q0.5 >= 0, '***', if_else(q98.5 <= 0 | q1.5 >= 0, '**', if_else(q97 <= 0 | q3 >= 0, '*', '')))) %>% 
   filter(str_detect(item, 'fg'))%>% 
   inner_join(matchingtb %>% select(item, shortname))
 summary(post_res_genera$q50)
@@ -85,8 +97,7 @@ summary(post_res_genera$q50)
 
   
 genera <- post_res_genera %>% 
-  filter(!item %in% c('nonablative','reduced','ablative')) %>% 
-  mutate(genus = factor(genus, levels = genus_odr))
+  filter(!item %in% c('nonablative','reduced','ablative')) 
 
 library(cowplot)
 title <- ggdraw() + 
@@ -113,7 +124,9 @@ diverging_palette <- scale_fill_gradient2(
 )
 ```
 
-# supp figure heatmap
+# heatmap
+
+## fd & genus
 
 ```{r} 
 genus_fg_main <- genera %>%  
@@ -124,39 +137,41 @@ genus_fg_main <- genera %>%
             nudge_y = -0.1, nudge_x = 0,size = 3) +
   scale_x_discrete( labels = function(x) { ifelse(str_detect(x, '\\*'),  str_glue("<b style='color:royalblue'>{x}</b>"), as.character(x)) }) +
   diverging_palette +
+  #guides(fill = guide_legend(title = "Effect size\n(posterior median)")) +
+  labs(fill = "Effect size\n(posterior median)") +
   theme(axis.title.x = element_blank(),axis.title.y = element_blank(),
         axis.text.y = element_markdown(face = "italic"),
         axis.text.x = element_markdown(angle = 45, hjust = 1),
-        legend.position = 'top', legend.text = element_text(size = 8), 
+        legend.position = 'top', legend.text = element_text(size = 5), 
         panel.background=element_rect(colour="black"),
         legend.key = element_rect( colour = "gray50"))
-genus_fg_main    
+genus_fg_main     
 ```
 
 
 ```{r} 
-dendropart <- plot_grid(
-  NA, dendro,NA, ncol = 1,rel_heights = c(-.48,.495, -.48),
- align = 'hv', axis = 'lrtb'
-) +theme(plot.margin = unit(c(0,-3,0,0), "cm")) 
-
-final_plot <- plot_grid(
-  genus_fg_main, dendropart,
- nrow = 1, ncol = 2,rel_widths = c(2.7,1.5),
- align = 'hv', axis = 'lrtb'
-) 
-
-combined <- plot_grid(
-  title, final_plot,
-  ncol = 1,
-  # rel_heights values control vertical title margins
-  rel_heights = c(0.05, 1)
-) +theme(plot.margin = unit(c(1,.5,1,.5), "cm"))
-
-ggsave('../data/S14_fg_genus_heatmap_180.pdf',
-      width = 210, height = 297, units = "mm", device = 'pdf', 
-      plot = combined, 
-      dpi = 300)
+# dendropart <- plot_grid(
+#   NA, dendro,NA, ncol = 1,rel_heights = c(-.48,.495, -.48),
+#  align = 'hv', axis = 'lrtb'
+# ) +theme(plot.margin = unit(c(0,-3,0,0), "cm")) 
+# 
+# final_plot <- plot_grid(
+#   genus_fg_main, dendropart,
+#  nrow = 1, ncol = 2,rel_widths = c(2.7,1.5),
+#  align = 'hv', axis = 'lrtb'
+# ) 
+# 
+# combined <- plot_grid(
+#   title, final_plot,
+#   ncol = 1,
+#   # rel_heights values control vertical title margins
+#   rel_heights = c(0.05, 1)
+# ) +theme(plot.margin = unit(c(1,.5,1,.5), "cm"))
+# 
+# ggsave('../data/S14_fg_genus_heatmap_180.pdf',
+#       width = 210, height = 297, units = "mm", device = 'pdf', 
+#       plot = combined, 
+#       dpi = 300)
 
 ```
 
@@ -167,24 +182,49 @@ post_df_macro <- read_csv('../data/090_target_genus_macro_model_post_interaction
   select(genus, starts_with('b_')) %>% 
   select(-starts_with('b_intensity')) %>% 
   gather('item', 'coeff', names(.)[2]:names(.)[ncol(.)]) %>% 
-  filter(genus %in% selected$genus)
-post_df_macro
+  filter(genus %in% selected$genus) %>% 
+  filter(str_detect(item, 'ave')) %>% 
+  mutate(item = str_replace(item, 'b_ave_',''),
+         item = str_replace(item, 'b_','')) %>% 
+  mutate(shortname = case_when(
+        item ==  'fiber_e' ~ 'abx * Fiber',  
+    item == 'fiber' ~ 'Fiber',
+    item ==  'fat_e' ~ 'abx * Fat',
+    item ==  'fat' ~ 'Fat',
+    item == 'Sugars_e' ~ 'abx * Sugars',
+    item == 'Sugars' ~ 'Sugars',
+    item ==  'nonablative' ~ 'Nonablative',
+    item ==  'reduced' ~ 'Reduced',
+    item ==  'ablative' ~ 'Ablative',
+    item ==  'TPN' ~ 'TPN',
+    item ==  'EN' ~ 'EN',
+    item ==  'abx' ~ 'abx'
+  )) %>% 
+  mutate(shortname = factor(shortname, levels = c('Fat','abx * Fat',
+                 'Fiber','abx * Fiber',
+                 'Sugars','abx * Sugars')))
+
 
 macro_res_genera <- post_df_macro %>% 
-  group_by(genus, item) %>% 
+  group_by(genus, shortname) %>% 
   summarise(q50 = median(coeff),
             q5 = quantile(coeff, probs = 0.05),
             q95 = quantile(coeff, probs = 0.95),
             q2.5 = quantile(coeff, probs = 0.025),
             q97.5 = quantile(coeff, probs = 0.975),
-            #q1.25 = quantile(coeff, probs = 0.0125),
-            #q98.75 = quantile(coeff, probs = 0.9875),
-            q0.5 = quantile(coeff, probs = 0.005),
-            q99.5 = quantile(coeff, probs = 0.995)
+               # 94%
+            q3 = round(quantile(coeff, probs = 0.03), 2),
+            q97 = round(quantile(coeff, probs = 0.97), 2),
+            # 97%
+            q1.5 = round(quantile(coeff, probs = 0.015), 2),
+            q98.5 = round(quantile(coeff, probs = 0.985), 2),
+            # 99%
+            q0.5 = round(quantile(coeff, probs = 0.005), 2),
+            q99.5 = round(quantile(coeff, probs = 0.995), 2)
             ) %>% 
-  ungroup() %>% 
-  mutate(mark = if_else(q99.5 < 0 | q0.5 > 0, '***', if_else(q97.5 < 0 | q2.5 > 0, '**', if_else(q95 < 0 | q5 > 0, '*', '')))) %>% 
-  filter(str_detect(item, 'ave'))
+  ungroup() %>%  
+  #mutate(mark = if_else(q99.5 < 0 | q0.5 > 0, '***', if_else(q97.5 < 0 | q2.5 > 0, '**', if_else(q95 < 0 | q5 > 0, '*', '')))) %>% 
+  mutate(mark = if_else(q99.5 <= 0 | q0.5 >= 0, '***', if_else(q98.5 <= 0 | q1.5 >= 0, '**', if_else(q97 <= 0 | q3 >= 0, '*', '')))) 
 
 # color the cells based on the q50
 
@@ -196,10 +236,92 @@ diverging_palette <- scale_fill_gradient2(
   midpoint = 0,  # Center the color scale at zero
   limits = c(-max(abs(macro_res_genera$q50)), max(abs(macro_res_genera$q50)))  # Set limits based on absolute max
 )
+
+genus_macro_main <- macro_res_genera %>% 
+  mutate(q50 = if_else(!str_detect(mark , '\\*'), 0, q50)) %>% 
+  ggplot( aes(x = shortname, y = genus)) +
+  geom_tile(aes(fill = q50,  x = shortname, y =  genus), alpha = 1, color='gray50', width=0.95, height=0.95) +
+  geom_text(aes(label = mark, x = shortname,y =  genus),
+            nudge_y = -0.1, nudge_x = 0,size = 3) +
+  #theme_pubr() +
+  diverging_palette +
+  scale_x_discrete( labels = function(x) { ifelse(str_detect(x, '\\*'),  str_glue("<b style='color:royalblue'>{x}</b>"), as.character(x)) }) +
+  labs(fill = "Effect size\n(posterior median)") +
+  theme(axis.title.x = element_blank(),axis.title.y = element_blank(),
+        axis.text.y = element_markdown(face = "italic"),
+        axis.text.x = element_markdown(angle = 45, hjust = 1),
+        legend.position = 'top', legend.text = element_text(size = 5), 
+        panel.background=element_rect(colour="black"),
+        legend.key = element_rect( colour = "gray50"))
+genus_macro_main
+```
+
+## supp figure
+
+```{r}
+# if put the fg and the macro heatmap together
+title <- ggdraw() + 
+  draw_label(
+    "Fig. S14",
+    fontface = 'bold',
+    x = 0,
+    hjust = 0
+  ) +
+  theme(plot.margin = margin(0, 0, 0, 5))
+
+heatmaps <- plot_grid(
+  genus_fg_main, genus_macro_main,
+  ncol = 2,
+  # rel_heights values control vertical title margins
+  rel_widths  = c(0.5, .3)
+) 
+
+combined <- plot_grid(
+  title, heatmaps,
+  ncol = 1,
+  # rel_heights values control vertical title margins
+  rel_heights = c(0.05, 1)
+) +theme(plot.margin = unit(c(1,1,1,1), "cm"))
+
+ggsave('../data/S14_genus_heatmaps_180.pdf',
+      width = 210, height = 297, units = "mm", device = 'pdf', 
+      plot = combined, 
+      dpi = 300)
 ```
 
 ```{r}
-genus_macro_main <- macro_res_genera %>% 
+paste0(selected$genus, collapse = ', ')
+```
+
+# subset popular
+
+```{r}
+# look at the subset popular genera: Staphylococcus actinomycin bifidobacterium lactobacillus 
+#Ruminococcus  streptococcus blautia ackmacashia bacteroides clostridium 
+hot <- c('Streptococcus', 'Blautia',  'Lactobacillus', 'Lachnoclostridium',  'Enterococcus',  'Bacteroides', 'Rothia',  'Bifidobacterium', 'Ruminococcus',  'Lactococcus',  'Actinomyces', 'Faecalimonas', 'Eubacterium', 'Akkermansia',  'Staphylococcus',  'Clostridium',  'Escherichia')
+
+genus_sub_fg <- genera %>%  
+  filter(genus %in% hot) %>% 
+  mutate(q50 = if_else(!str_detect(mark , '\\*'), 0, q50)) %>% 
+  ggplot( aes(x = shortname, y = genus)) +
+  geom_tile(aes(fill = q50,  x = shortname, y =  genus), alpha = 1, color='gray50', width=0.95, height=0.95) +
+  geom_text(aes(label = mark, x = shortname,y =  genus),
+            nudge_y = -0.1, nudge_x = 0,size = 3) +
+  scale_x_discrete( labels = function(x) { ifelse(str_detect(x, '\\*'),  str_glue("<b style='color:royalblue'>{x}</b>"), as.character(x)) }) +
+  diverging_palette +
+  #guides(fill = guide_legend(title = "Effect size\n(posterior median)")) +
+  labs(fill = "Effect size\n(posterior median)") +
+  theme(axis.title.x = element_blank(),axis.title.y = element_blank(),
+        axis.text.y = element_markdown(face = "italic"),
+        axis.text.x = element_markdown(angle = 45, hjust = 1),
+        legend.position = 'top', legend.text = element_text(size = 5), 
+        panel.background=element_rect(colour="black"),
+        legend.key = element_rect( colour = "gray50")) 
+
+```
+```{r}
+genus_macro_sub <- macro_res_genera %>% 
+   filter(genus %in% hot) %>% 
   mutate(q50 = if_else(!str_detect(mark , '\\*'), 0, q50)) %>% 
   ggplot( aes(x = item, y = genus)) +
   geom_tile(aes(fill = q50,  x = item, y =  genus), alpha = 1, color='gray50', width=0.95, height=0.95) +
@@ -207,39 +329,25 @@ genus_macro_main <- macro_res_genera %>%
             nudge_y = -0.1, nudge_x = 0,size = 3) +
   #theme_pubr() +
   diverging_palette +
+  scale_x_discrete( labels = function(x) { ifelse(str_detect(x, '_e'),  str_glue("<b style='color:royalblue'>{x}</b>"), as.character(x)) }) +
   theme(axis.title.x = element_blank(),axis.title.y = element_blank(),
-        axis.text.x = element_text(angle=45, hjust=1, size=10),
+        axis.text.x = element_markdown(angle = 45, hjust = 1),
         axis.text.y=element_text(size=10),
         legend.position = 'top',
         panel.background=element_rect(colour="black"),
         legend.key = element_rect( colour = "gray50")) 
-#genus_macro_main
 ```
-
 ```{r}
-title <- ggdraw() + 
-  draw_label(
-    "Fig. S_X",
-    fontface = 'bold',
-    x = 0,
-    hjust = 0
-  ) +
-  theme(plot.margin = margin(0, 0, 0, 5))
-
 combined <- plot_grid(
-  title,NA, genus_macro_main,
-  ncol = 1,
+  genus_sub_fg, genus_macro_sub,
+  ncol = 2,
   # rel_heights values control vertical title margins
-  rel_heights = c(0.05,0.057, .5)
-) +theme(plot.margin = unit(c(1,.5,1,.5), "cm"))
+  rel_widths  = c(0.5, .3)
+) +theme(plot.margin = unit(c(1,1,1,1), "cm"))
 
-ggsave('../data/S_X_genus_macro_heatmap_180.pdf',
-      width = 210, height = 297, units = "mm", device = 'pdf', 
+ggsave('../data/S_X_genus__heatmap_180.pdf',
+      width = 300, height = 297, units = "mm", device = 'pdf', 
       plot = combined, 
       dpi = 300)
-```
-
-```{r}
-paste0(target_genera, collapse = ', ')
 ```
 
